# delivery-ocr

./: README.md  docker-compose.yaml
api/: pyproject.toml
api/src/: main.py
api/src/core/: config.py  llm.py  prompt.py  schema.py
api/src/service/: ocr_delivery.py  utils.py
docs/: delivery_ocr.ipynb
